# rustml

./: .gitignore  Cargo.toml  Readme.md  dt.model  kmeans.model  knn.model  lir.model  lor.model  lr.model  lr2.model  rf.model  svc.model  svr.model
src/: SpotifyNotebook.ipynb  smartcoreknn.rs  svmmulticlassification.rs  usemodel.rs  utilities.rs
